--- a/map.css
+++ b/map.css
@@ -26,6 +26,11 @@ body {
   padding: 1%;  
 }
 
+div {
+  border: 2px solid grey;
+  border-radius: 3px;
+}
+
 #left-side {
   width: 65%;
   float: left;
