--- a/map.css
+++ b/map.css
@@ -4,8 +4,9 @@
  */
 #map {
   height: 80%;
-  width: 90%;
-  margin: 20px 0; 
+  width: 100%;
+  margin: 20px 0;
+  border: 2px solid rgb(71, 71, 71); 
 }
 
 /* 
@@ -16,31 +17,61 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-size: 18px;
+  font-size: 20px;
 }
 
 #wrap {
   width: 100%;
-  height: 100%;
-  background-color: beige;
-  padding: 1%;  
-}
-
-div {
-  border: 2px solid grey;
-  border-radius: 3px;
+  height: 100%;  
+  padding: 15px;  
 }
 
 #left-side {
-  width: 65%;
+  width: 70%;
   float: left;
+  padding-right: 20px;
 }
 
-#rigth-side {
-  width: 30%;
+#right-side {
+  width: 20%;
+  float: left;  
+ 
 }
 
 .bold {
   font-weight: bold;
+}
+
+#locate, #date, #people {
+  border: 2px solid black;
+  border-radius: 3px;
+  margin-bottom: 20px;  
+}
+
+#locate, #date {
+  padding-left: 15px;
+}
+
+#people div {
+  border-top: 2px solid black;
+  padding-left: 15px;
+}
+
+ul {
+  list-style: none;
+}
+
+li {
+  margin-bottom: 15px;
+  border: 2px solid black;
+  border-radius: 12px;
+  background-image: url(bistruy-start.png);
+  background-repeat: no-repeat;
+  background-size: 40px;
+  padding: 10px 0px 0px 57px;
+  width: 225px;
+  height: 42px;
+  background-position-y: center;
+  background-position-x: 4px;
 }
 
